--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
     <title>Scalapenos - {{ page.title }}</title>
 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+
+    <meta name="description" content="Scalapenos, a blog about Scala by Age Mooij">
+    <meta name="author"      content="Age Mooij, @agemooij">
 
 {% capture lvl %}{{ page.url | append:'index.html' | split:'/' | size }}{% endcapture %}
 {% capture relative %}{% for i in (3..lvl) %}../{% endfor %}{% endcapture %}
 
-    <!-- Le styles -->
     <link rel="stylesheet" href="{{ relative }}css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ relative }}css/bootstrap-responsive.min.css">
 
@@ -25,7 +25,6 @@
       <script src="js/html5shiv.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ relative }}img/scalapenos-logo-white-144.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ relative }}img/scalapenos-logo-white-114.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ relative }}img/scalapenos-logo-white-72.png">
@@ -63,10 +62,8 @@
     </div> <!-- /container -->
 
 
-    <!-- Le javascript
-    ================================================== -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" ></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{{ relative }}js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
