--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Scalapenos - {{ page.title }}</title>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+
+    <meta name="description" content="Scalapenos, a blog about Scala by Age Mooij">
+    <meta name="author"      content="Age Mooij, @agemooij">
 
 {% capture lvl %}{{ page.url | append:'index.html' | split:'/' | size }}{% endcapture %}
 {% capture relative %}{% for i in (3..lvl) %}../{% endfor %}{% endcapture %}
 
-    <!-- Le styles -->
     <link rel="stylesheet" href="{{ relative }}css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ relative }}css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="{{ relative }}css/font-awesome.min.css">
@@ -62,10 +60,8 @@
     </div> <!-- /container -->
 
 
-    <!-- Le javascript
-    ================================================== -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" ></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{{ relative }}js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
