--- a/css/docs.css
+++ b/css/docs.css
@@ -11,13 +11,40 @@
   background-repeat: no-repeat;
 }
 
-/*
-  Bootstrap's documentation styles
-  Special styles for presenting Bootstrap's documentation and examples
-*/
-
 .main-content-container {
   margin-top:20px;
+}
+
+.post {
+  padding: 30px 0;
+  list-style: none;
+  overflow: hidden;
+  border-bottom: 1px solid #ccc;
+}
+
+.post-title {
+  line-height: 25px;
+  margin: 0px 0px;
+  font-weight: bold;
+}
+
+.post-title a {
+  color: #000000;
+  text-decoration: none;
+}
+
+.post-title a:hover {
+  color: #ff0000;
+}
+
+.post-time {
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #999;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 
