--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@
           <a class="brand" href="index.html"><i class="scalapenos-logo"></i></a>
 
           <ul class="nav pull-right">
-            <li><a href="index.html"><i class="icon-info-sign icon-2x"></i></a></li>
+            <li><a href="about.html"><i class="icon-info-sign icon-2x"></i></a></li>
             <li><a href="http://github.com/agemooij/"><i class="icon-github icon-2x"></i></a></li>
             <li><a href="https://twitter.com/agemooij"><i class="icon-twitter icon-2x"></i></a></li>
           </ul>
@@ -56,7 +56,7 @@
           <div class="post-time">
             {{ page.date | date: "%A %B %d, %Y" }}
           </div>
-          <div>
+          <div class="post-body">
 {{ content }}
           </div>
         </div>
