--- a/css/docs.css
+++ b/css/docs.css
@@ -1163,3 +1163,19 @@ form.bs-docs-example {
     padding-bottom: 20px;
   }
 }
+
+/* Portrait phones
+------------------------- */
+@media (max-width: 320px) {
+  /* use a smaller logo */
+.scalapenos-logo {
+  width: 165px;
+  height: 25px;
+  background-image: url("../img/scalapenos-text-black-25-small.png");
+}
+
+  /* remove the margin after the logo to make room for the menu button. */
+  body > .navbar .brand {
+    margin-right: 0px;
+  }
+}
