--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="index.html"><i class="scalapenos-logo"></i></a>
+          <a class="brand" href="/index.html"><i class="scalapenos-logo"></i></a>
 
           <ul class="nav pull-right">
             <li><a href="about.html"><i class="icon-info-sign icon-2x"></i></a></li>
