Removed the about link until I have time to write an about page ;)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@
           <a class="brand" href="/index.html"><i class="scalapenos-logo"></i></a>
 
           <ul class="nav pull-right">
-            <li><a href="about.html"><i class="icon-info-sign icon-2x"></i></a></li>
+            <!-- <li><a href="about.html"><i class="icon-info-sign icon-2x"></i></a></li> -->
             <li><a href="http://github.com/agemooij/"><i class="icon-github icon-2x"></i></a></li>
             <li><a href="https://twitter.com/agemooij"><i class="icon-twitter icon-2x"></i></a></li>
           </ul>
