Added an RSS link to the head tag on all pages

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,6 +25,8 @@
       <script src="js/html5shiv.js"></script>
     <![endif]-->
 
+    <link rel="alternate" type="application/rss+xml" title="Scalapenos" href="/rss.xml" />
+
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ relative }}img/scalapenos-logo-white-144.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ relative }}img/scalapenos-logo-white-114.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ relative }}img/scalapenos-logo-white-72.png">
