--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,8 @@
       <script src="js/html5shiv.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
+    <link rel="alternate" type="application/rss+xml" title="Scalapenos" href="/rss.xml" />
+
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ relative }}img/scalapenos-logo-white-144.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ relative }}img/scalapenos-logo-white-114.png">
       <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ relative }}img/scalapenos-logo-white-72.png">
