Added a bottom margin to blog posts so they don't stop so close to the edge of the browser window

--- a/css/docs.css
+++ b/css/docs.css
@@ -74,7 +74,8 @@
 }
 
 .post-body {
-  font-family: "PT Serif", "Georgia", serif
+  font-family: "PT Serif", "Georgia", serif;
+  margin-bottom: 50px;
 }
 
 .post .post-title {
